--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "portfolio",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "bootstrap": "^4.5.0",
-    "gatsby": "^2.23.10",
-    "gatsby-image": "^2.4.8",
-    "gatsby-plugin-manifest": "^2.4.13",
-    "gatsby-plugin-offline": "^3.2.12",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-react-helmet": "^3.3.5",
-    "gatsby-plugin-sharp": "^2.6.13",
-    "gatsby-source-filesystem": "^2.3.13",
-    "gatsby-transformer-sharp": "^2.5.6",
+    "gatsby": "^3.4.1",
+    "gatsby-image": "^3.4.0",
+    "gatsby-plugin-manifest": "^3.4.0",
+    "gatsby-plugin-offline": "^4.4.0",
+    "gatsby-plugin-preload-fonts": "^2.4.0",
+    "gatsby-plugin-react-helmet": "^4.4.0",
+    "gatsby-plugin-sharp": "^3.4.1",
+    "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-transformer-sharp": "^3.4.0",
+    "postcss": "^8.2.14",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0"
   },
@@ -35,6 +36,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "preload-fonts": "gatsby-preload-fonts",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
