--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "bootstrap": "^4.5.0",
+    "bootstrap": "^4.6.1",
     "devicon": "^2.12.0",
-    "gatsby": "^3.4.1",
-    "gatsby-image": "^3.4.0",
-    "gatsby-plugin-manifest": "^3.4.0",
-    "gatsby-plugin-offline": "^4.4.0",
+    "gatsby": "^4.11.1",
+    "gatsby-plugin-manifest": "^4.11.1",
+    "gatsby-plugin-offline": "^5.11.1",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
-    "gatsby-plugin-preload-fonts": "^2.4.0",
-    "gatsby-plugin-react-helmet": "^4.4.0",
-    "gatsby-plugin-sharp": "^3.4.1",
-    "gatsby-source-filesystem": "^3.4.0",
-    "gatsby-transformer-sharp": "^3.4.0",
-    "postcss": "^8.2.14",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.5.2",
-    "react-dom": "^16.12.0",
+    "gatsby-plugin-preload-fonts": "^3.11.1",
+    "gatsby-plugin-react-helmet": "^5.11.0",
+    "gatsby-plugin-sharp": "^4.11.1",
+    "gatsby-source-filesystem": "^4.11.1",
+    "gatsby-transformer-sharp": "^4.11.0",
+    "js-yaml": "^4.1.0",
+    "postcss": "^8.4.12",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "prettier": "2.6.2"
   },
   "keywords": [
     "gatsby"
