--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.6.1",
     "devicon": "^2.12.0",
     "gatsby": "^4.11.1",
+    "gatsby-plugin-image": "^2.11.1",
     "gatsby-plugin-manifest": "^4.11.1",
     "gatsby-plugin-offline": "^5.11.1",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
@@ -16,6 +17,7 @@
     "gatsby-plugin-sharp": "^4.11.1",
     "gatsby-source-filesystem": "^4.11.1",
     "gatsby-transformer-sharp": "^4.11.0",
+    "gatsby-transformer-yaml": "^4.11.0",
     "js-yaml": "^4.1.0",
     "postcss": "^8.4.12",
     "prop-types": "^15.8.1",
