--- a/src/data/tech/tools/data.yaml
+++ b/src/data/tech/tools/data.yaml
@@ -29,13 +29,13 @@ tools:
     bgColor: "#df234f"
     devicon: nestjs-plain
 
-  - id: postgresql
+  - id: postgres
     name: PostgreSQL
     color: "white"
     bgColor: "#336791"
     devicon: postgresql-plain
 
-  - id: mongodb
+  - id: mongo
     name: MongoDB
     color: "black"
     bgColor: "#4faa41"
@@ -75,40 +75,52 @@ tools:
     name: AWS
     color: "black"
     bgColor: "#f7a80d"
-    iconPng: "aws"
+    iconPng: "icons/aws.png"
 
   - id: jekyll
     name: Jekyll
     color: "white"
     bgColor: "#d80101"
-    iconPng: "jekyll"
+    iconPng: "icons/jekyll.png"
 
   - id: netlify
     name: Netlify
     color: "black"
     bgColor: "#40a0b7"
-    iconPng: "netlify"
+    iconPng: "icons/netlify.png"
 
   - id: travis
     name: Travis CI
     color: "white"
     bgColor: "#3EAAAF"
-    iconPng: "travis"
+    iconPng: "icons/travis.png"
 
   - id: drone
     name: Drone CI
     color: "white"
     bgColor: "#1e375a"
-    iconPng: "drone"
+    iconPng: "icons/drone.png"
 
   - id: discord
     name: Discord
     color: "white"
     bgColor: "#5560e9"
-    iconPng: "discord"
+    iconPng: "icons/discord.png"
 
   - id: cordova
     name: Cordova
     color: "black"
     bgColor: "#4dc2e4"
-    iconPng: "cordova"
+    iconPng: "icons/cordova.png"
+
+  - id: cloudflare
+    name: Cloudflare
+    color: "white"
+    bgColor: "#f6821f"
+    iconPng: "icons/cloudflare.png"
+
+  - id: gatsby
+    name: Gatsby
+    color: "white"
+    bgColor: "#663399"
+    devicon: gatsby-plain
