--- a/src/data/showcase/projects/data.yaml
+++ b/src/data/showcase/projects/data.yaml
@@ -3,6 +3,7 @@ projects:
     name: Hackathon Suite
     description: A suite of applications developed to aid the organization of a hackathon event
     image: images/hackathon.jpg
+    page: ./hackathon.md
     tools:
       - typescript
       - react
@@ -25,44 +26,45 @@ projects:
       - rbac
       - crossplatform
 
-  - id: osdp
-    name: Ohio Sentencing Data Platform
-    description: A system for courts to record and analyze sentencing data using standardized entry forms
-    image: images/osdp.png
-    page: ./osdp.md
-    tools:
-      - typescript
-      - react
-      - express
-      - postgres
-      - mongo
-      - drone
-      - docker
-      - linux
-    features:
-      - ddd
-      - devops
-      - rbac
-      - e2e
+  # - id: osdp
+  #   name: Ohio Sentencing Data Platform
+  #   description: A system for courts to record and analyze sentencing data using standardized entry forms
+  #   image: images/osdp.png
+  #   page: ./osdp.md
+  #   tools:
+  #     - typescript
+  #     - react
+  #     - express
+  #     - postgres
+  #     - mongo
+  #     - drone
+  #     - docker
+  #     - linux
+  #   features:
+  #     - ddd
+  #     - devops
+  #     - rbac
+  #     - e2e
 
-  - id: bonfire
-    name: UCCI Risk Assessment
-    description: A system for risk assessment tracking for correction agencies
-    tools:
-      - typescript
-      - react
-      - express
-      - postgres
-    features:
-      - distributed
-      - rbac
-      - devops
-      - microservices
+  # - id: bonfire
+  #   name: UCCI Risk Assessment
+  #   description: A system for risk assessment tracking for correction agencies
+  #   tools:
+  #     - typescript
+  #     - react
+  #     - express
+  #     - postgres
+  #   features:
+  #     - distributed
+  #     - rbac
+  #     - devops
+  #     - microservices
 
   - id: portfolio
     name: Portfolio
     description: My portfolio website
     image: images/DA.png
+    page: ./portfolio.md
     tools:
       - gatsby
       - typescript
@@ -77,6 +79,7 @@ projects:
     name: HealthyLovedOnes
     description: A web and mobile portal for care giving job postings and caregivers to create a profile and apply to postings
     image: images/hlo.jpg
+    page: ./hloapp.md
     tools:
       - meteor
       - cordova
@@ -94,6 +97,7 @@ projects:
     name: Hitch'd
     description: My very first personal project - a wedding planner app
     image: images/hitchd.jpg
+    page: ./hitchd.md
     tools:
       - meteor
       - cordova
