--- a/src/data/tech/features/data.yaml
+++ b/src/data/tech/features/data.yaml
@@ -68,3 +68,8 @@ features:
     name: Accessibility
     color: "white"
     bgColor: "#292f4c"
+
+  - id: serverless
+    name: Serverless
+    color: "white"
+    bgColor: "#025669"
