--- a/src/data/tech/tools/data.yaml
+++ b/src/data/tech/tools/data.yaml
@@ -4,129 +4,151 @@ tools:
     color: "white"
     bgColor: "#007acc"
     devicon: typescript-plain
+    description: "A statically typed superset of JavaScript"
 
   - id: react
     name: React
     color: "black"
     bgColor: "#61DBFB"
     devicon: react-original
+    description: "You know what React is."
 
   - id: angular
     name: Angular
     color: "white"
     bgColor: "#dd0031"
     devicon: angularjs-plain
+    description: "A batteries-included front-end framework for building scalable applications"
 
   - id: express
     name: Express
     color: "white"
     bgColor: "#444444"
     devicon: express-original
+    description: "A minimal and flexible Node.js web application framework"
 
   - id: nest
     name: Nest
     color: "white"
     bgColor: "#df234f"
     devicon: nestjs-plain
+    description: "A dotnet style framework for building enterprise-level Node.js applications"
 
   - id: postgres
     name: PostgreSQL
     color: "white"
     bgColor: "#336791"
     devicon: postgresql-plain
+    description: "A powerful, open source object-relational database system"
 
   - id: mongo
     name: MongoDB
     color: "black"
     bgColor: "#4faa41"
     devicon: mongodb-plain
+    description: "A NoSQL database with a friendly user interface for JavaScript and Node.js developers"
 
   - id: heroku
     name: Heroku
     color: "white"
     bgColor: "#6762a6"
     devicon: heroku-line
+    description: "A container-based cloud platform as a service (PaaS) for developers"
 
   - id: docker
     name: Docker
     color: "white"
     bgColor: "#019bc6"
     devicon: docker-plain
+    description: "A containerization platform for distributed applications"
 
   - id: linux
     name: Linux
     color: "white"
     bgColor: "black"
     devicon: linux-plain
+    description: "You know what Linux is."
 
   - id: meteor
     name: Meteor
     color: "white"
     bgColor: "#df5052"
     devicon: meteor-plain
+    description: "A framework to build real-time full stack web applications with Node.js and MongoDB"
 
   - id: android
     name: Android
     color: "white"
     bgColor: "#a4c439"
     devicon: android-plain
+    description: "A mobile operating system for mobile devices"
 
   - id: aws
     name: AWS
     color: "black"
     bgColor: "#f7a80d"
     iconPng: "icons/aws.png"
+    description: "The most popular cloud platform"
 
   - id: jekyll
     name: Jekyll
     color: "white"
     bgColor: "#d80101"
     iconPng: "icons/jekyll.png"
+    description: "A static site generator for Ruby"
 
   - id: netlify
     name: Netlify
     color: "black"
     bgColor: "#40a0b7"
     iconPng: "icons/netlify.png"
+    description: "A cloud platform for hosting static sites"
 
   - id: travis
     name: Travis CI
     color: "white"
     bgColor: "#3EAAAF"
     iconPng: "icons/travis.png"
+    description: "A cloud-based continuous integration platform for software development"
 
   - id: drone
     name: Drone CI
     color: "white"
     bgColor: "#1e375a"
     iconPng: "icons/drone.png"
+    description: "An open source container-based continuous integration platform for software development"
 
   - id: discord
     name: Discord
     color: "white"
     bgColor: "#5560e9"
     iconPng: "icons/discord.png"
+    description: "A cloud-based chat and voice application"
 
   - id: cordova
     name: Cordova
     color: "black"
     bgColor: "#4dc2e4"
     iconPng: "icons/cordova.png"
+    description: "A cross-platform mobile application development framework"
 
   - id: cloudflare
     name: Cloudflare
     color: "white"
     bgColor: "#f6821f"
     iconPng: "icons/cloudflare.png"
+    description: "A web application security platform"
 
   - id: gatsby
     name: Gatsby
     color: "white"
     bgColor: "#663399"
     devicon: gatsby-plain
+    description: "A static site generator for React"
 
   - id: next
     name: Next.js
     color: "white"
     bgColor: "#111"
     devicon: nextjs-plain
+    description: "A server-side rendering framework for React"
