--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "@types/gatsbyjs__reach-router": "^1.3.0",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.17",
     "@types/react-helmet": "^6.1.5",
     "prettier": "2.6.2"
   },
