--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,5 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "cSpell.words": ["frontmatter", "hackathon"]
+  "cSpell.words": ["frontmatter", "gatsbyjs", "hackathon"]
 }
