--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "cSpell.words": [
+    "Agrawal",
     "Collab",
     "collabs",
     "frontmatter",
@@ -35,6 +36,7 @@
     "hackathon",
     "ITSA",
     "leadershape",
+    "noreferrer",
     "revolutionuc",
     "revuc",
     "roundtable"
