finished 4th year in review

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,12 +29,15 @@
   },
   "cSpell.words": [
     "Agrawal",
+    "automations",
     "Collab",
     "collabs",
     "Davian",
+    "EECS",
     "frontmatter",
     "gatsbyjs",
     "hackathon",
+    "hackathons",
     "ITSA",
     "leadershape",
     "noreferrer",
