--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-transformer-remark": "^5.11.1",
     "gatsby-transformer-sharp": "^4.11.0",
     "gatsby-transformer-yaml": "^4.11.0",
+    "highlight.js": "^11.5.1",
     "merge-images": "^2.0.0",
     "postcss": "^8.4.12",
     "prop-types": "^15.8.1",
