font aawesome and landing page

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^4.6.1",
     "canvas": "^2.9.1",
     "devicon": "^2.12.0",
